--- a/index.html
+++ b/index.html
@@ -1,12 +1,59 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>AluraGeek</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!--<h1>Hola Word</h1> -->
-    
+    <header>
+        <div class="logo">
+            <img class="imagea1"  src="imagenes/corazones.png" alt="corazones">
+            <img class="imagea2"  src="imagenes/AluraGeek.png" alt="AluraGeek">
+        </div>
+    </header>
+    <main>
+        <div class="pro-produc">
+            <section class="products">
+                <h2>MIS PRODUCTOS:</h2>
+                <div class="product-list">
+                    <div class="product-card">
+                        <img src="imagenes/unsplash_6FDXGY9J6y4.svg" alt="Stormtrooper">
+                        <p>Stormtrooper</p>
+                        <p>$60,00</p>
+                        <button class="delete-btn">🗑️</button>
+                    </div>
+                    <div class="product-card">
+                        <img src="imagenes/image 2.svg" alt="Game Boy Classic">
+                        <p>Game Boy Classic</p>
+                        <p>$60,00</p>
+                        <button class="delete-btn">🗑️</button>
+                    </div>
+                </div>
+            </section>
+            <section class="add-product">
+                <h2>AGREGAR PRODUCTO:</h2>
+                <form>
+                    <div class="relleno">
+                        <input type="text" name="name" placeholder="nombre...">
+                        <input type="text" name="price" placeholder="precio...">
+                        <input type="text" name="image" placeholder="imagen...">
+                    </div>
+                    <div class="botones">
+                        <button type="submit">Enviar</button>
+                        <button type="reset">Limpiar</button>
+                    </div>    
+                </form>
+            </section>
+        </div>
+    </main>
+    <footer>
+        <img src="imagenes/corazones.png" alt="corazones">
+        <img class="imagea2"  src="imagenes/AluraGeek.png" alt="AluraGeek">
+        <span>DESARROLLADO POR CUEVA CHRISTIAN</span>
+        <span>ALURA LATAM - 2024</span>
+    </footer>
+    <script src="formulario.js"></script>
 </body>
 </html>
